<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:icon="@drawable/ic_inventory_selected"
            android:id="@+id/nav_inventory"
            android:title="@string/invenroty"/>
        <item
            android:icon="@drawable/ic_inventory_selected"
            android:id="@+id/nav_inventory_led"
            android:title="@string/led_inventory"/>
        <item
            android:icon="@drawable/ic_read_write_tag"
            android:id="@+id/nav_read_write_tag"
            android:title="@string/read_write_tag"/>
        <item
            android:icon="@drawable/ic_settings"
            android:id="@+id/nav_setting"
            android:title="@string/settings"/>
        <item
            android:icon="@drawable/ic_tag"
            android:id="@+id/nav_temp"
            android:title="@string/temp_tag"/>
        <item
            android:icon="@drawable/ic_freq_settings"
            android:id="@+id/nav_help"
            android:title="@string/help"/>
        <item
            android:icon="@drawable/ic_help"
            android:id="@+id/nav_about"
            android:title="@string/about"/>
    </group>
</menu>
