<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inventory">
    <fragment
        android:label="@string/invenroty"
        android:name="com.pda.uhf_g.ui.fragment.InventoryFragment"
        android:id="@+id/nav_inventory"/>
    <fragment
        android:label="@string/led_inventory"
        android:name="com.pda.uhf_g.ui.fragment.InventoryLedFragment"
        android:id="@+id/nav_inventory_led"/>
    <fragment
        android:label="@string/read_write_tag"
        android:name="com.pda.uhf_g.ui.fragment.ReadWriteTag"
        android:id="@+id/nav_read_write_tag"/>
    <fragment
        android:label="@string/settings"
        android:name="com.pda.uhf_g.ui.fragment.SettingsFragment"
        android:id="@+id/nav_setting"/>
    <fragment
        android:label="@string/temperature"
        android:name="com.pda.uhf_g.ui.fragment.TemperatureTagFragment"
        android:id="@+id/nav_temp"/>
    <fragment
        android:label="@string/help"
        android:name="com.pda.uhf_g.ui.fragment.HelpFragment"
        android:id="@+id/nav_help"/>
    <fragment
        android:label="@string/about"
        android:name="com.pda.uhf_g.ui.fragment.AboutFragment"
        android:id="@+id/nav_about"/>
</navigation>
