<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:gravity="center"
        android:id="@+id/textView_sn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sn"
        android:layout_weight="1"/>
    <TextView
        android:gravity="center"
        android:id="@+id/textView_epc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/epc"
        android:layout_weight="10"/>
    <TextView
        android:gravity="center"
        android:id="@+id/textView_temp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:layout_weight="2"/>
    <TextView
        android:gravity="center"
        android:id="@+id/textView_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tag_count"
        android:layout_weight="2"/>
</LinearLayout>
