<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tag_select"/>
                <Spinner
                    android:id="@+id/spinner_epc"
                    android:background="@drawable/spinner_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/min_height_40dp"
                    android:layout_weight="1"/>
                <CheckBox
                    android:id="@+id/checkbox_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/filter"/>
            </LinearLayout>
            <TextView
                android:textSize="@dimen/text_size_18sp"
                android:background="@color/teal_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_write_tag"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <RadioGroup
                    android:orientation="horizontal"
                    android:id="@+id/radio_membank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton_epc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/epc"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/radioButton_tid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tid"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/radioButton_user"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/user"
                        android:layout_weight="1"/>
                    <RadioButton
                        android:id="@+id/radioButton_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:layout_weight="1"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_addr"/>
                <EditText
                    android:id="@+id/editText_start_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_height_60dp"
                    android:text="0"
                    android:singleLine="true"
                    android:inputType="number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"/>
                <EditText
                    android:id="@+id/editText_len"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/min_height_60dp"
                    android:text="1"
                    android:singleLine="true"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_password"/>
                <EditText
                    android:id="@+id/editText_access_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:text="00000000"
                    android:singleLine="true"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"/>
                <EditText
                    android:id="@+id/editText_write_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_data"/>
                <EditText
                    android:gravity="top"
                    android:id="@+id/editText_read_data"
                    android:background="@drawable/corners_background"
                    android:padding="@dimen/margin_3dp"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <Button
                    android:id="@+id/button_read"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:minHeight="@dimen/min_height_60dp"
                    android:text="@string/read"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/button_write"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:minHeight="@dimen/min_height_60dp"
                    android:text="@string/write"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/button_clean"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:minHeight="@dimen/min_height_60dp"
                    android:text="@string/clean"
                    android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                android:textSize="@dimen/text_size_18sp"
                android:background="@color/teal_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modify_epc"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_epc"/>
                    <EditText
                        android:id="@+id/editText_new_epc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/please_input_hex_string"
                        android:singleLine="true"
                        android:layout_weight="1"/>
                </LinearLayout>
                <Button
                    android:id="@+id/button_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:minHeight="@dimen/min_height_60dp"
                    android:text="@string/modify_epc"/>
            </LinearLayout>
            <TextView
                android:textSize="@dimen/text_size_18sp"
                android:background="@color/teal_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_tag"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:text="@string/lock_data"/>
                <Spinner
                    android:entries="@array/lock_data"
                    android:id="@+id/sipnner_lock_data"
                    android:background="@drawable/spinner_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:minHeight="@dimen/min_height_40dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:text="@string/lock_type"/>
                <Spinner
                    android:entries="@array/lock_type"
                    android:id="@+id/sipnner_lock_type"
                    android:background="@drawable/spinner_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_3dp"
                    android:minHeight="@dimen/min_height_40dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp">
                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/access_password"/>
                <EditText
                    android:id="@+id/editText_lock_password"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"/>
                <Button
                    android:layout_gravity="right"
                    android:id="@+id/button_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/min_height_60dp"
                    android:minHeight="@dimen/min_height_60dp"
                    android:text="@string/lock_tag"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_tips"/>
            <TextView
                android:textSize="@dimen/text_size_18sp"
                android:background="@color/teal_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kill_tag"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3dp"
                android:layout_marginBottom="@dimen/min_height_40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kill_password"/>
                <EditText
                    android:id="@+id/editText_kill_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp"
                    android:singleLine="true"/>
                <Button
                    android:layout_gravity="right"
                    android:id="@+id/button_kill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/min_height_60dp"
                    android:minHeight="@dimen/min_height_60dp"
                    android:text="@string/kill_tag"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
