<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3dp">
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_select"/>
        <Spinner
            android:entries="@array/temp_manufacturer"
            android:id="@+id/spinner_manufactorer"
            android:background="@drawable/spinner_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_height_40dp"/>
    </LinearLayout>
    <include layout="@layout/temperature_tag_item"/>
    <ListView
        android:id="@+id/listVew_epc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3dp">
        <Button
            android:textSize="@dimen/text_size_18sp"
            android:id="@+id/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:minHeight="@dimen/min_height_60dp"
            android:text="@string/read"
            android:layout_weight="1"/>
        <Button
            android:textSize="@dimen/text_size_18sp"
            android:id="@+id/button_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:minHeight="@dimen/min_height_60dp"
            android:text="@string/clean"/>
    </LinearLayout>
</LinearLayout>
